# me507_minilab_1

./: Cargo.toml  memory.x  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs
