[[bin]] # prevent "Can't find crate for 'test'" error
name = "me507_minilab_1"
test = false
bench = false

[package]
edition = "2021"
name = "me507_minilab_1"
version = "0.1.0"
authors = ["jack7"]
resolver = "2"

[profile.release]
lto = true
opt-level = "s"
incremental = false
codegen-units = 1
# note: debug = true is okay - debuginfo isn't flashed to the device!
debug = true
strip = true

[profile.dev]
lto = "thin"
opt-level = 0
incremental = true
# note: debug = true is okay - debuginfo isn't flashed to the device!
debug = true
panic = "abort"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-storage = "0.3.1"

cortex-m-rt = "0.7.3"

embassy-executor = { version = "0.5.0", features = ["task-arena-size-1024", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers", "executor-interrupt"] }
embassy-sync = { version = "0.5.0" }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
embassy-stm32 = { version = "0.1.0", features = ["defmt", "stm32l476rg", "unstable-pac", "memory-x", "time-driver-tim15" ]  } # "time-driver-any" appears to default to tim2 - which means PA_5 has TIM2 unavailable for PWM
heapless = "0.8.0"
